--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,4 @@
+import { prefix } from "../utils/prefix.js"
 import Bleed from 'nextra-theme-docs/bleed'
 
 # Nextra
@@ -8,4 +9,4 @@ It supports Markdown and React components ([MDX](/features/mdx)), automatically 
 
 Here's what you will get in 1 minute:
 
-<Bleed>![Nextra Example](../cabra/demo.png)</Bleed>
+<Bleed>![Nextra Example](`${prefix}/demo.png`)</Bleed>
