colors & tagpill docs added

--- a/pages/components/tagPill.mdx
+++ b/pages/components/tagPill.mdx
@@ -3,9 +3,19 @@ import TagPill from '../../npm/components/TagPill';
 ## Tag Pill
 
 ```js
-
 <TagPill primary>Primary</TagPill>
-
+<TagPill secondary>secondary</TagPill>
+<TagPill disabled>disabled</TagPill>
+<TagPill excluded>excluded</TagPill>
+<TagPill positive>positive</TagPill>
+<TagPill negative>negative</TagPill>
+<TagPill neutral>neutral</TagPill>
 ```
 
-<TagPill primary> Primary </TagPill>
+<TagPill primary>Primary</TagPill>
+<TagPill secondary>secondary</TagPill>
+<TagPill disabled>disabled</TagPill>
+<TagPill excluded>excluded</TagPill>
+<TagPill positive>positive</TagPill>
+<TagPill negative>negative</TagPill>
+<TagPill neutral>neutral</TagPill>
