--- a/pages/components/tagPill.mdx
+++ b/pages/components/tagPill.mdx
@@ -13,9 +13,9 @@ import TagPill from '../../npm/components/TagPill';
 ```
 
 <TagPill primary>Primary</TagPill>
-<TagPill secondary>secondary</TagPill>
-<TagPill disabled>disabled</TagPill>
-<TagPill excluded>excluded</TagPill>
-<TagPill positive>positive</TagPill>
-<TagPill negative>negative</TagPill>
-<TagPill neutral>neutral</TagPill>
+<TagPill secondary>Secondary</TagPill>
+<TagPill disabled>Disabled</TagPill>
+<TagPill excluded>Excluded</TagPill>
+<TagPill positive>Positive</TagPill>
+<TagPill negative>Negative</TagPill>
+<TagPill neutral>Neutral</TagPill>
