--- a/pages/components/tagPill.mdx
+++ b/pages/components/tagPill.mdx
@@ -1,5 +1,8 @@
 import TagPill from '../../npm/components/TagPill';
 
+title: TagPill
+
+
 ## Tag Pill
 
 ```js
@@ -12,10 +15,10 @@ import TagPill from '../../npm/components/TagPill';
 <TagPill neutral>neutral</TagPill>
 ```
 
-<TagPill primary>Primary</TagPill>
-<TagPill secondary>Secondary</TagPill>
-<TagPill disabled>Disabled</TagPill>
-<TagPill excluded>Excluded</TagPill>
-<TagPill positive>Positive</TagPill>
-<TagPill negative>Negative</TagPill>
-<TagPill neutral>Neutral</TagPill>
+<TagPill primary id="1">Primary</TagPill>
+<TagPill secondary id="2">Secondary</TagPill>
+<TagPill disabled id="3">Disabled</TagPill>
+<TagPill excluded id="4">Excluded</TagPill>
+<TagPill positive id="5">Positive</TagPill>
+<TagPill negative id="6">Negative</TagPill>
+<TagPill neutral id="7">Neutral</TagPill>
