added colors and spacing tokens docs

--- a/pages/components/tagPill.mdx
+++ b/pages/components/tagPill.mdx
@@ -1,10 +1,8 @@
 import TagPill from '../../npm/components/TagPill';
 
-title: TagPill
+# Tag Pill
 
-
-## Tag Pill
-
+### Usage
 ```js
 <TagPill primary>Primary</TagPill>
 <TagPill secondary>secondary</TagPill>
@@ -15,10 +13,12 @@ title: TagPill
 <TagPill neutral>neutral</TagPill>
 ```
 
-<TagPill primary id="1">Primary</TagPill>
-<TagPill secondary id="2">Secondary</TagPill>
-<TagPill disabled id="3">Disabled</TagPill>
-<TagPill excluded id="4">Excluded</TagPill>
-<TagPill positive id="5">Positive</TagPill>
-<TagPill negative id="6">Negative</TagPill>
-<TagPill neutral id="7">Neutral</TagPill>
+<div style={{display: 'flex', flexWrap: 'wrap'}}>
+  <TagPill primary id="1">Primary</TagPill>
+  <TagPill secondary id="2">Secondary</TagPill>
+  <TagPill disabled id="3">Disabled</TagPill>
+  <TagPill excluded id="4">Excluded</TagPill>
+  <TagPill positive id="5">Positive</TagPill>
+  <TagPill negative id="6">Negative</TagPill>
+  <TagPill neutral id="7">Neutral</TagPill>
+</div>
