--- a/pages/tokens/colors.mdx
+++ b/pages/tokens/colors.mdx
@@ -1,7 +1,24 @@
-import * as tokens from '../../npm/styles/js/variables.js';
+import * as tokens from '../../npm/styles/js/variables.js'
 
-## Colors
+# Colors
 
-{Object.entries(tokens['Core']).map(([key, value]) => {
-  if (value.type === 'color') return (<div style={{marginBottom: '5px', height: '25px', backgroundColor: value.value, color: 'white', paddingLeft: '15px'}}>{key}</div>)
+{console.log(tokens)}
+{Object.entries(tokens['Core'].colors).map(([key, value]) => {
+  return (
+    <div key={`${key}`}>
+      <h4 style={{margin: '20px 0px 0px 0px', color: 'black'}}>{key}</h4>
+      <hr style={{margin: '0px', backgroundColor: 'black', height: '2px' }}/>
+      <div style={{display: 'flex', flexWrap: 'wrap'}}>
+        {Object.entries(value).map(([key, color]) => {
+          return (
+            <div key={`${key}`} style={{display: 'flex', flexDirection: 'column', marginRight: '10px'}}>
+              <p style={{margin: '0px'}}>{key}</p>
+              <div
+                style={{backgroundColor: color.value, height: '75px', width: '75px', textAlign: 'center'}}/>
+            </div>
+          )
+        })}
+      </div>
+    </div>
+  )
 })}
