added color value & color value copy on click

--- a/pages/components/tagPill.mdx
+++ b/pages/components/tagPill.mdx
@@ -13,7 +13,7 @@ import TagPill from '../../npm/components/TagPill';
 <TagPill neutral>neutral</TagPill>
 ```
 
-<div style={{display: 'flex', flexWrap: 'wrap'}}>
+<div style={{display: 'flex', flexWrap: 'wrap', minWidth: '50vw'}}>
   <TagPill primary id="1">Primary</TagPill>
   <TagPill secondary id="2">Secondary</TagPill>
   <TagPill disabled id="3">Disabled</TagPill>
