--- a/pages/tokens/spacing.mdx
+++ b/pages/tokens/spacing.mdx
@@ -3,7 +3,7 @@ import * as tokens from '../../npm/styles/js/variables.js'
 # Spacing
 
 {console.log(tokens)}
-<table style={{width: '50vw', marginTop: '30px'}}>
+<table style={{minWidth: '50vw', marginTop: '30px'}}>
   <tr>
     <th>Name</th>
     <th>Size</th>
