trying json nested (sd.config)

--- a/pages/tokens/colors.mdx
+++ b/pages/tokens/colors.mdx
@@ -30,7 +30,7 @@ import * as tokens from '../../npm/styles/js/variables.js'
                   alert("Copied the color: " + colorRange + " " + colorName)
                 }}
               >
-                <p style={{color: color.value, filter: 'invert(0.8)', fontSize: '12px'}} id={color.value}>{color.value}</p>
+                <p style={{color: color.value, filter: 'contrast(600%) invert(0.7)', fontSize: '12px'}} id={color.value}>{color.value}</p>
               </div>
             </div>
           )
