--- a/pages/tokens/spacing.mdx
+++ b/pages/tokens/spacing.mdx
@@ -12,7 +12,7 @@ import * as tokens from '../../npm/styles/js/variables.js'
     {Object.entries(tokens['Core'].space).map(([key, space]) => {
       return (
         <tr key={`${key}`}>
-          <td style={{ margin: '20px 0px 0px 0px', color: 'black' }}>{key}</td>
+          <td style={{ margin: '20px 0px 0px 0px'}}>{key}</td>
           <td style={{ display: 'flex', flexWrap: 'wrap' }}>{space.value}</td>
           <td>
             <div
